Fix Quote overflow

--- a/src/styles/endsars.css
+++ b/src/styles/endsars.css
@@ -144,7 +144,6 @@ blockquote {
 
 .twitter-tweet-cont {
     height: 375px;
-    width: 200px;
     flex: 0 0 auto;
     border: 1px solid #efefef;
     border-radius: 1rem;
@@ -152,6 +151,11 @@ blockquote {
     margin: 0 0.25rem 1.5rem;
     word-break: break-word;
     overflow-y: scroll;
+}
+
+/* Default look before transformation by Twitter JS file */
+blockquote.twitter-tweet {
+    width: 200px;
 }
 
 .twitter-tweet-cont::-webkit-scrollbar-thumb {
